--- a/color_project/bgcolors/package.json
+++ b/color_project/bgcolors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01vitereact",
+  "name": "bgcolors",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
