--- a/color_project/bgmagic/package.json
+++ b/color_project/bgmagic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "bgmagic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.17",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.0.17"
+    "@tailwindcss/vite": "^4.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
