--- a/projects/Ref/package.json
+++ b/projects/Ref/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "megaproject",
+  "name": "ref",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.1.7",
-    "@tinymce/tinymce-react": "^6.1.0",
-    "appwrite": "^18.1.1",
-    "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.0",
-    "redux": "^5.0.1",
-    "tailwindcss": "^4.1.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
